# api-template

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
app/: database.py  logging.py  main.py
app/lib/crud/: crud_controller.py
compose-files/: compose-db.yaml  compose.yaml
